plugins {
    id 'application'
    id 'com.diffplug.spotless' version '6.25.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.arrow.flight.core
    implementation libs.arrow.flight.sql

    implementation libs.slf4j.api
    runtimeOnly libs.slf4j.simple

    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'io.deephaven.example.BearerExample'
}

spotless {
    java {
        googleJavaFormat()
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--add-opens', 'java.base/java.nio=ALL-UNNAMED']
}

tasks.withType(CreateStartScripts).configureEach {
    defaultJvmOpts += ['--add-opens', 'java.base/java.nio=ALL-UNNAMED']
}
